--- a/PortfoiloWEB/Areas/Admin/Views/Admin/Contact.cshtml
+++ b/PortfoiloWEB/Areas/Admin/Views/Admin/Contact.cshtml
@@ -71,7 +71,7 @@
                                     <p class="card-text">@item.Name</p>
                                     <p class="card-text">@item.Email</p>
                                     <button type="submit" class="btn btn-outline-danger">Sil</button>
-                                    <a href="#" class="btn btn-outline-success">Yaz</a>
+                                    <a href="#" class="btn btn-outline-success">Mesaj Yaz</a>
                                 </div>
                             </div>
                         </form>
